# collector

./: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  compile_commands.json  prj.conf  sample.yaml  west.yml
.github/workflows/: build.yml  docs.yml
app/: CMakeLists.txt
src/: main.c  main.cpp
zephyr/: west.yml
